agregando mas tecnologias en el capitulo 2

--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,108 @@
 
-@online{azure_iot,
-    author    = "Azure",
-    title     = "Azure IoT Hub",
-    url       = "https://azure.microsoft.com/en-gb/products/iot-hub",
+@online{cese_gonzalo_memoria,
+    author    = "Esp. Ing. Gonzalo Carreño",
+    title     = "LSE-FIUBA - Trabajo Final CESE- Robot de exploración ambiental",
+    url       = "https://lse-posgrados-files.fi.uba.ar/tesis/LSE-FIUBA-Trabajo-Final-CESE-Gonzalo-Carreno-2024.pdf",
+    keywords  = "latex,knuth"
+}
+@online{latam-mining-robot-minero-unsj,
+    author    = "Latam Mining",
+    title     = "Robots y minería: Gobierno argentino quiere implementarlos",
+    url       = "https://www.latam-mining.com/robots-y-mineria-gobierno-argentino-quiere-implementarlos/",
+    keywords  = "latex,knuth"
+}
+@online{diario-de-cuyo-prototipo-robotico,
+    author    = "Diario de Cuyo",
+    title     = "Gobierno pone la mira en el desarrollo de robots para la actividad minera",
+    url       = "https://www.diariodecuyo.com.ar/politica/Gobierno-pone-la-mira-en-el-desarrollo-de-robots-para-la-actividad-minera-20200202-0052.html",
+    keywords  = "latex,knuth"
+}
+@online{comunicacion-unsj-prototipo-convenio,
+    author    = "Universidad Nacional de San Juan",
+    title     = "Robots en la minería",
+    url       = "http://www.unsj.edu.ar/home/noticias_detalles/4810/1",
+    keywords  = "latex,knuth"
+}
+@online{geobot,
+    author    = "Ing. Nelson Dario García Hurtado e Ing. Melvin Andrés González Pino",
+    title     = "Robot de exploración terrestre Geobot",
+    url       = "https://www.unipamplona.edu.co/unipamplona/portalIG/home_40/recursos/01_general/revista_1/09102011/v01_09.pdf",
+    keywords  = "latex,knuth"
+}
+@online{min-sis,
+    author    = "Ing. Hernán L. Helguero Velásquez1 e Ing. Rubén Medinaceli Tórrez",
+    title     = "Robot Minero: Sistema Detector de Gases utilizando Sensores en Tiempo Real MIN – SIS 1.0 SDG-STR",
+    url       = "http://www.scielo.org.bo/scielo.php?script=sci_arttext&pid=S2519-53522020000100003",
+    keywords  = "latex,knuth"
+}
+@online{spot,
+    author    = "Boston Dynamics",
+    title     = "Spot",
+    url       = "https://www.bostondynamics.com/products/spot",
+    keywords  = "latex,knuth"
+}
+@online{bike_inspection,
+    author    = "Waygate Technologies",
+    title     = "BIKE - An advanced crawler robot for remote visual inspection",
+    url       = "https://www.bakerhughes.com/waygate-technologies/robotic-inspection/bike",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_seg_china,
+    author    = "As.com | Marc Fontrodona",
+    title     = "Una estación de esquí china despliega una patrulla de perros robot",
+    url       = "https://as.com/deportes_accion/snow/una-estacion-de-esqui-china-despliega-una-patrulla-de-perros-robot-n",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_bilbao,
+    author    = "Cadenaser.com | Radio Bilbao",
+    title     = "Bilbao inspecciona sus redes de saneamiento con drones y robots para mejorar la eficiencia y la seguridad",
+    url       = "https://cadenaser.com/euskadi/2024/12/18/bilbao-inspecciona-sus-redes-de-saneamiento-con-drones-y-robots-para-mejorar-la-eficiencia-y-la-seguridad-radio-bilbao/",
+    keywords  = "latex,knuth"
+}
+
+@online{iot_usecase_cuenca,
+    author    = "Los40.com | Dani Cabezas",
+    title     = "Así se gestiona un “tecnobosque”",
+    url       = "https://los40.com/2024/12/10/asi-se-gestiona-un-tecnobosque/",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_blockchain_1,
+    author    = "Cadenaser.com | Radio Sevilla",
+    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
+    url       = "https://cadenaser.com/andalucia/2025/03/10/lidl-refuerza-su-compromiso-con-la-transparencia-e-innovacion-en-el-sector-oleicola-al-lanzar-primera-cosecha-un-aove-con-tecnologia-blockchain-radio-sevilla/",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_blockchain_2,
+    author    = "Cadenaser.com | Radio Sevilla",
+    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
+    url       = "https://cadenaser.com/aragon/2024/11/12/acf-innove-presentara-sus-proyectos-mas-innovadores-en-el-sie-huesca-radio-huesca/",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_blockchain_walmart,
+    author    = "Walmart | Global Tech",
+    title     = "Blockchain in the food supply chain - What does the future look like?",
+    url       = "https://tech.walmart.com/content/walmart-global-tech/en_us/blog/post/blockchain-in-the-food-supply-chain.html?utm_source=chatgpt.com",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_blockchain_saltoki,
+    author    = "Interempresas | Julio Lema, Paula Eiroa",
+    title     = "Mejorar la eficiencia energética con IoT y blockchain",
+    url       = "https://www.interempresas.net/Energia/Articulos/446423-Mejorar-la-eficiencia-energetica-con-IoT-y-blockhain.html",
+    keywords  = "latex,knuth"
+}
+@online{iot_usecase_blockchain_scantrust,
+    author    = "ledgerinsights | Nicky Morris",
+    title     = "ScanTrust’s anti-counterfeit solution isn’t just about blockchain",
+    url       = "https://www.ledgerinsights.com/scantrust-anti-counterfeit-blockchain/",
     keywords  = "latex,knuth"
 }
 
 
 
-@online{evm,
-    author    = "Wthereum.org",
-    title     = "Ethereum Virtual Machine (EVM)",
-    url       = "https://ethereum.org/en/developers/docs/evm/",
-    keywords  = "latex,knuth"
-}
+
+
+
+
 
 
 @online{Bluetooth,
@@ -22,131 +111,134 @@
     url       = "https://en.wikipedia.org/wiki/Bluetooth",
     keywords  = "latex,knuth"
 }
-
 @online{zigbee,
     author    = "Wikipedia",
     title     = "Zigbee",
     url       = "https://en.wikipedia.org/wiki/Zigbee",
     keywords  = "latex,knuth"
 }
-
 @online{Narrowband_IoT,
     author    = "Wikipedia",
     title     = "Narrowband IoT",
     url       = "https://en.wikipedia.org/wiki/Narrowband_IoT",
     keywords  = "latex,knuth"
 }
-
 @online{wifi,
     author    = "Wikipedia",
     title     = "Wi-Fi",
     url       = "https://es.wikipedia.org/wiki/Wifi",
     keywords  = "latex,knuth"
 }
-
 @online{5g,
     author    = "Wikipedia",
     title     = "5G",
     url       = "https://es.wikipedia.org/wiki/5G",
     keywords  = "latex,knuth"
 }
-
-
 @online{lorawan,
     author    = "Wikipedia",
     title     = "LoraWAN",
     url       = "https://es.wikipedia.org/wiki/LoRaWAN",
     keywords  = "latex,knuth"
 }
-
-
-
 @online{ESP32,
     author    = "Espressif",
     title     = "ESP32",
     url       = "https://www.espressif.com/en/products/socs/esp32",
     keywords  = "latex,knuth"
 }
-
 @online{ESPIDF_home,
     author    = "Espressif",
     title     = "ESP-IDF Programming Guide | Get Started",
     url       = "https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/",
     keywords  = "latex,knuth"
 }
-
-
 @online{FreeRTOS,
     author    = "FreeRTOS",
     title     = "FreeRTOS | Real-time operating system for microcontrollers and small microprocessors",
     url       = "https://www.freertos.org/",
     keywords  = "latex,knuth"
 }
-
-
 @online{mqtt_spec,
     author    = "OASIS",
     title     = "MQTT Protocol Specification",
     url       = "https://mqtt.org/mqtt-specification/",
     keywords  = "latex,knuth"
 }
+@online{esp_idf_lib_website,
+    author    = "Readthedocs by Ruslan V. Uss",
+    title     = "ESP-IDF Components library",
+    url       = "https://esp-idf-lib.readthedocs.io/en/latest/",
+    keywords  = "latex,knuth"
+}
+@online{espressif-website-esp-idf,
+    author    = "Espressif Programing Guide",
+    title     = "ESP-IDF Get Started",
+    url       = "https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/index.html",
+    keywords  = "latex,knuth"
+}
+@online{ninja_website,
+    author    = "CMake",
+    title     = "Ninja",
+    url       = "https://cmake.org/cmake/help/latest/generator/Ninja.html",
+    keywords  = "latex,knuth"
+}
+@online{cmake_website,
+    author    = "CMake",
+    title     = "CMake",
+    url       = "https://cmake.org/",
+    keywords  = "latex,knuth"
+}
 
 
+
+
+
+
+
+
+@online{evm,
+    author    = "Ethereum.org",
+    title     = "Ethereum Virtual Machine (EVM)",
+    url       = "https://ethereum.org/en/developers/docs/evm/",
+    keywords  = "latex,knuth"
+}
 @online{blockchain,
     author    = "Wikipedia",
     title     = "Blockchain",
     url       = "https://en.wikipedia.org/wiki/Blockchain",
     keywords  = "latex,knuth"
 }
-
-
-@online{nube_publica,
-    author    = "Amazon Web Services",
-    title     = "¿Qué es una nube pública?",
-    url       = "https://aws.amazon.com/es/what-is/public-cloud/",
-    keywords  = "latex,knuth"
-}
-
-
 @online{smart_contracts,
     author    = "Wikipedia",
     title     = "Smart Contracts",
     url       = "https://en.wikipedia.org/wiki/Smart_contract",
     keywords  = "latex,knuth"
 }
-
-
 @online{dapp,
     author    = "Wikipedia",
     title     = "DApp - Decentralized Application",
     url       = "https://en.wikipedia.org/wiki/Decentralized_application",
     keywords  = "latex,knuth"
 }
-
-
-
-
 @online{PoS,
     author    = "Wikipedia",
     title     = "Proof of Stake",
     url       = "https://en.wikipedia.org/wiki/Proof_of_stake",
     keywords  = "latex,knuth"
 }
-
 @online{PoW,
     author    = "Wikipedia",
     title     = "Proof of Work",
     url       = "https://en.wikipedia.org/wiki/Proof_of_work",
     keywords  = "latex,knuth"
 }
-
 @online{web2_vs_web3,
     author    = "Emily Shwake",
     title     = "Web2 vs. Web3: What is the difference?",
     url       = "https://www.wix.com/blog/web2-vs-web3",
     keywords  = "latex,knuth"
 }
-
 @online{web3,
     author    = "Web3.js",
     title     = "Web3.js - Ethereum JavaScript API",
@@ -159,45 +251,36 @@
     url       = "https://docs.soliditylang.org/en/latest/abi-spec.html",
     keywords  = "latex,knuth"
 }
-
-
-
-
 @online{mainnet,
     author    = "Truffle Suite",
     title     = "Truffle | What is Truffle?",
     url       = "https://etherscan.io/",
     keywords  = "latex,knuth"
 }
-
 @online{sepolia,
     author    = "Truffle Suite",
     title     = "Truffle | What is Truffle?",
     url       = "https://sepolia.etherscan.io/",
     keywords  = "latex,knuth"
 }
-
 @online{holesky,
     author    = "Truffle Suite",
     title     = "Truffle | What is Truffle?",
     url       = "https://holesky.etherscan.io/",
     keywords  = "latex,knuth"
 }
-
 @online{truffle_website,
     author    = "Truffle Suite",
     title     = "Truffle | What is Truffle?",
     url       = "https://archive.trufflesuite.com/docs/truffle/",
     keywords  = "latex,knuth"
 }
-
 @online{ganache_website,
     author    = "Truffle Suite",
     title     = "Ganache | One click blockchain",
     url       = "https://archive.trufflesuite.com/ganache/",
     keywords  = "latex,knuth"
 }
-
 @online{alchemy_website,
     author    = "Alchemy",
     title     = "Alchemy | The most reliable way to build web3 apps",
@@ -210,16 +293,12 @@
     url       = "https://docs.alchemy.com/reference/api-overview",
     keywords  = "latex,knuth"
 }
-
-
 @online{etherscan,
     author    = "Etherscan",
     title     = "Etherscan",
     url       = "https://etherscan.io/",
     keywords  = "latex,knuth"
 }
-
-
 @online{metamask,
     author    = "Metamask",
     title     = "Metamask | Your home in Web3",
@@ -240,15 +319,38 @@
     url       = "https://ethereum.org/",
     keywords  = "latex,knuth"
 }
-
-
-@online{nodejs,
-    author    = "Node.js",
-    title     = "Node.js",
-    url       = "https://nodejs.org/en",
+@online{google_faucets,
+    author    = "Google",
+    title     = "Google Cloud Web3",
+    url       = "https://cloud.google.com/application/web3/faucet",
     keywords  = "latex,knuth"
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+@online{aws_codePipeline,
+    author    = "Amazon Web Services",
+    title     = "AWS CodePipeline",
+    url       = "https://aws.amazon.com/codepipeline/",
+    keywords  = "latex,knuth"
+}
+@online{aws_ECR,
+    author    = "Amazon Web Services",
+    title     = "AWS Elastic Container Registry",
+    url       = "https://aws.amazon.com/ecr/",
+    keywords  = "latex,knuth"
+}
 @online{aws_athena,
     author    = "Amazon Web Service",
     title     = "AWS Athena",
@@ -280,230 +382,161 @@
     keywords  = "latex,knuth"
 }
 
-
-
-
 @online{aws_glue,
     author    = "Amazon Web Service",
     title     = "AWS Glue",
     url       = "https://aws.amazon.com/glue/",
     keywords  = "latex,knuth"
 }
-
-
-
-
-@online{esp_idf_lib_website,
-    author    = "Readthedocs by Ruslan V. Uss",
-    title     = "ESP-IDF Components library",
-    url       = "https://esp-idf-lib.readthedocs.io/en/latest/",
+@online{aws_lambda,
+    author    = "Amazon Web Service",
+    title     = "AWS Lambda",
+    url       = "https://aws.amazon.com/lambda/",
+    keywords  = "latex,knuth"
+}
+@online{aws_sns,
+    author    = "Amazon Web Service",
+    title     = "AWS SNS",
+    url       = "https://aws.amazon.com/sns/",
+    keywords  = "latex,knuth"
+}
+@online{aws_sqs,
+    author    = "Amazon Web Service",
+    title     = "AWS SQS",
+    url       = "https://aws.amazon.com/sqs/",
+    keywords  = "latex,knuth"
+}
+@online{aws_secrets,
+    author    = "Amazon Web Service",
+    title     = "AWS Secrets Manager",
+    url       = "https://aws.amazon.com/secrets-manager/",
+    keywords  = "latex,knuth"
+}
+@online{aws_dynamodb,
+    author    = "Amazon Web Service",
+    title     = "AWS Dynamo",
+    url       = "https://aws.amazon.com/dynamodb/",
+    keywords  = "latex,knuth"
+}
+@online{aws_cloudwatch,
+    author    = "Amazon Web Service",
+    title     = "AWS CloudWatch",
+    url       = "https://aws.amazon.com/cloudwatch/",
+    keywords  = "latex,knuth"
+}
+@online{aws_iam,
+    author    = "Amazon Web Service",
+    title     = "AWS IAM",
+    url       = "https://aws.amazon.com/iam/",
     keywords  = "latex,knuth"
 }
 
 
 
 
-@online{SoftwareTool_codePipeline,
+
+
+@online{azure_iot,
+    author    = "Azure",
+    title     = "Azure IoT Hub",
+    url       = "https://azure.microsoft.com/en-gb/products/iot-hub",
+    keywords  = "latex,knuth"
+}
+@online{azure_fabric,
+    author    = "Microsoft",
+    title     = "Microsoft Fabric | Fundamentals",
+    url       = "https://learn.microsoft.com/en-us/fabric/",
+    keywords  = "latex,knuth"
+}
+@online{azure,
+    author    = "Microsoft",
+    title     = "Microsoft Azure",
+    url       = "https://azure.microsoft.com/",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+
+
+
+
+
+@online{nodejs,
+    author    = "Node.js",
+    title     = "Node.js",
+    url       = "https://nodejs.org/en",
+    keywords  = "latex,knuth"
+}
+@online{nube_publica,
     author    = "Amazon Web Services",
-    title     = "AWS CodePipeline",
-    url       = "https://aws.amazon.com/codepipeline/",
+    title     = "¿Qué es una nube pública?",
+    url       = "https://aws.amazon.com/es/what-is/public-cloud/",
     keywords  = "latex,knuth"
 }
-@online{SoftwareTool_ECR,
-    author    = "Amazon Web Services",
-    title     = "AWS Elastic Container Registry",
-    url       = "https://aws.amazon.com/ecr/",
-    keywords  = "latex,knuth"
-}
-
-@online{SoftwareTool_Github,
-    author    = "Github",
-    title     = "Github",
-    url       = "https://github.com/",
-    keywords  = "latex,knuth"
-}
-
-@online{vscode_website,
-    author    = "Visualstudio",
-    title     = "Visualstudio Code",
-    url       = "https://code.visualstudio.com/",
-    keywords  = "latex,knuth"
-}
-
-@online{ninja_website,
-    author    = "CMake",
-    title     = "Ninja",
-    url       = "https://cmake.org/cmake/help/latest/generator/Ninja.html",
-    keywords  = "latex,knuth"
-}
-
-@online{cmake_website,
-    author    = "CMake",
-    title     = "CMake",
-    url       = "https://cmake.org/",
-    keywords  = "latex,knuth"
-}
-
-@online{docker_website,
-    author    = "Docker",
-    title     = "Docker",
-    url       = "https://docker.com/",
-    keywords  = "latex,knuth"
-}
-
-@online{ubuntu_website,
-    author    = "Ubuntu",
-    title     = "Ubuntu",
-    url       = "https://ubuntu.com/",
-    keywords  = "latex,knuth"
-}
-
-
-@online{cese_gonzalo_memoria,
-    author    = "Esp. Ing. Gonzalo Carreño",
-    title     = "LSE-FIUBA - Trabajo Final CESE- Robot de exploración ambiental",
-    url       = "https://lse-posgrados-files.fi.uba.ar/tesis/LSE-FIUBA-Trabajo-Final-CESE-Gonzalo-Carreno-2024.pdf",
-    keywords  = "latex,knuth"
-}
-
-
-@online{espressif-website-esp-idf,
-    author    = "Espressif Programing Guide",
-    title     = "ESP-IDF Get Started",
-    url       = "https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/index.html",
-    keywords  = "latex,knuth"
-}
-
-@online{latam-mining-robot-minero-unsj,
-    author    = "Latam Mining",
-    title     = "Robots y minería: Gobierno argentino quiere implementarlos",
-    url       = "https://www.latam-mining.com/robots-y-mineria-gobierno-argentino-quiere-implementarlos/",
-    keywords  = "latex,knuth"
-}
-
-@online{diario-de-cuyo-prototipo-robotico,
-    author    = "Diario de Cuyo",
-    title     = "Gobierno pone la mira en el desarrollo de robots para la actividad minera",
-    url       = "https://www.diariodecuyo.com.ar/politica/Gobierno-pone-la-mira-en-el-desarrollo-de-robots-para-la-actividad-minera-20200202-0052.html",
-    keywords  = "latex,knuth"
-}
-
-@online{comunicacion-unsj-prototipo-convenio,
-    author    = "Universidad Nacional de San Juan",
-    title     = "Robots en la minería",
-    url       = "http://www.unsj.edu.ar/home/noticias_detalles/4810/1",
-    keywords  = "latex,knuth"
-}
-
-
-
-@online{geobot,
-    author    = "Ing. Nelson Dario García Hurtado e Ing. Melvin Andrés González Pino",
-    title     = "Robot de exploración terrestre Geobot",
-    url       = "https://www.unipamplona.edu.co/unipamplona/portalIG/home_40/recursos/01_general/revista_1/09102011/v01_09.pdf",
-    keywords  = "latex,knuth"
-}
-
-@online{min-sis,
-    author    = "Ing. Hernán L. Helguero Velásquez1 e Ing. Rubén Medinaceli Tórrez",
-    title     = "Robot Minero: Sistema Detector de Gases utilizando Sensores en Tiempo Real MIN – SIS 1.0 SDG-STR",
-    url       = "http://www.scielo.org.bo/scielo.php?script=sci_arttext&pid=S2519-53522020000100003",
-    keywords  = "latex,knuth"
-}
-
-@online{spot,
-    author    = "Boston Dynamics",
-    title     = "Spot",
-    url       = "https://www.bostondynamics.com/products/spot",
-    keywords  = "latex,knuth"
-}
-
-@online{bike_inspection,
-    author    = "Waygate Technologies",
-    title     = "BIKE - An advanced crawler robot for remote visual inspection",
-    url       = "https://www.bakerhughes.com/waygate-technologies/robotic-inspection/bike",
-    keywords  = "latex,knuth"
-}
-
-
-
-@online{iot_usecase_seg_china,
-    author    = "As.com | Marc Fontrodona",
-    title     = "Una estación de esquí china despliega una patrulla de perros robot",
-    url       = "https://as.com/deportes_accion/snow/una-estacion-de-esqui-china-despliega-una-patrulla-de-perros-robot-n",
-    keywords  = "latex,knuth"
-}
-@online{iot_usecase_bilbao,
-    author    = "Cadenaser.com | Radio Bilbao",
-    title     = "Bilbao inspecciona sus redes de saneamiento con drones y robots para mejorar la eficiencia y la seguridad",
-    url       = "https://cadenaser.com/euskadi/2024/12/18/bilbao-inspecciona-sus-redes-de-saneamiento-con-drones-y-robots-para-mejorar-la-eficiencia-y-la-seguridad-radio-bilbao/",
-    keywords  = "latex,knuth"
-}
-
-@online{iot_usecase_cuenca,
-    author    = "Los40.com | Dani Cabezas",
-    title     = "Así se gestiona un “tecnobosque”",
-    url       = "https://los40.com/2024/12/10/asi-se-gestiona-un-tecnobosque/",
-    keywords  = "latex,knuth"
-}
-
-
-@online{iot_usecase_blockchain_1,
-    author    = "Cadenaser.com | Radio Sevilla",
-    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
-    url       = "https://cadenaser.com/andalucia/2025/03/10/lidl-refuerza-su-compromiso-con-la-transparencia-e-innovacion-en-el-sector-oleicola-al-lanzar-primera-cosecha-un-aove-con-tecnologia-blockchain-radio-sevilla/",
-    keywords  = "latex,knuth"
-}
-
-
-@online{iot_usecase_blockchain_2,
-    author    = "Cadenaser.com | Radio Sevilla",
-    title     = "Lidl refuerza su compromiso con la transparencia e innovación en el sector oleícola al lanzar Primera Cosecha, un AOVE con tecnología blockchain",
-    url       = "https://cadenaser.com/aragon/2024/11/12/acf-innove-presentara-sus-proyectos-mas-innovadores-en-el-sie-huesca-radio-huesca/",
-    keywords  = "latex,knuth"
-}
-
-
-@online{iot_usecase_blockchain_walmart,
-    author    = "Walmart | Global Tech",
-    title     = "Blockchain in the food supply chain - What does the future look like?",
-    url       = "https://tech.walmart.com/content/walmart-global-tech/en_us/blog/post/blockchain-in-the-food-supply-chain.html?utm_source=chatgpt.com",
-    keywords  = "latex,knuth"
-}
-
-
-@online{iot_usecase_blockchain_saltoki,
-    author    = "Interempresas | Julio Lema, Paula Eiroa",
-    title     = "Mejorar la eficiencia energética con IoT y blockchain",
-    url       = "https://www.interempresas.net/Energia/Articulos/446423-Mejorar-la-eficiencia-energetica-con-IoT-y-blockhain.html",
-    keywords  = "latex,knuth"
-}
-
-@online{iot_usecase_blockchain_scantrust,
-    author    = "ledgerinsights | Nicky Morris",
-    title     = "ScanTrust’s anti-counterfeit solution isn’t just about blockchain",
-    url       = "https://www.ledgerinsights.com/scantrust-anti-counterfeit-blockchain/",
-    keywords  = "latex,knuth"
-}
-
 @online{sntp,
     author    = "IBM Documentation",
     title     = "Simple Network Time Protocol",
     url       = "https://www.ibm.com/docs/en/i/7.4.0?topic=services-simple-network-time-protocol",
     keywords  = "latex,knuth"
 }
-
-@online{google_faucets,
-    author    = "Google",
-    title     = "Google Cloud Web3",
-    url       = "https://cloud.google.com/application/web3/faucet",
-    keywords  = "latex,knuth"
-}
-
 @online{open_api,
     author    = "swagger.io",
     title     = "Open API Specification",
     url       = "https://swagger.io/specification/",
     keywords  = "latex,knuth"
 }
+@online{SoftwareTool_Github,
+    author    = "Github",
+    title     = "Github",
+    url       = "https://github.com/",
+    keywords  = "latex,knuth"
+}
+@online{vscode_website,
+    author    = "Visualstudio",
+    title     = "Visualstudio Code",
+    url       = "https://code.visualstudio.com/",
+    keywords  = "latex,knuth"
+}
+@online{docker_website,
+    author    = "Docker",
+    title     = "Docker",
+    url       = "https://docker.com/",
+    keywords  = "latex,knuth"
+}
+@online{ubuntu_website,
+    author    = "Ubuntu",
+    title     = "Ubuntu",
+    url       = "https://ubuntu.com/",
+    keywords  = "latex,knuth"
+}
+@online{abac,
+    author    = "Wikipedia",
+    title     = "ABAC",
+    url       = "https://en.wikipedia.org/wiki/Attribute-based_access_control",
+    keywords  = "latex,knuth"
+}
+
+@online{mfa,
+    author    = "Wikipedia",
+    title     = "MFA",
+    url       = "https://en.wikipedia.org/wiki/Multi-factor_authentication",
+    keywords  = "latex,knuth"
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
