--- a/references.bib
+++ b/references.bib
@@ -454,6 +454,42 @@
     url       = "https://azure.microsoft.com/",
     keywords  = "latex,knuth"
 }
+@online{fabric_warehouse,
+    author    = "Microsoft",
+    title     = "Fabric | Data Warehouse",
+    url       = "https://learn.microsoft.com/en-us/fabric/data-warehouse/data-warehousing",
+    keywords  = "latex,knuth"
+}
+@online{fabric_lakehouse,
+    author    = "Microsoft",
+    title     = "Fabric | Data Lakehouse",
+    url       = "https://learn.microsoft.com/en-us/fabric/data-engineering/lakehouse-overview",
+    keywords  = "latex,knuth"
+}
+@online{fabric_datafactory,
+    author    = "Microsoft",
+    title     = "Fabric | Azure Data Factory",
+    url       = "https://learn.microsoft.com/en-us/fabric/data-factory/data-factory-overview",
+    keywords  = "latex,knuth"
+}
+@online{fabric_dataflows,
+    author    = "Microsoft",
+    title     = "Fabric | Dataflows (Gen2)",
+    url       = "https://learn.microsoft.com/en-us/fabric/data-factory/dataflows-gen2-overview",
+    keywords  = "latex,knuth"
+}
+@online{fabric_powerbi,
+    author    = "Microsoft",
+    title     = "Fabric | Power BI",
+    url       = "https://learn.microsoft.com/en-us/power-bi/fundamentals/fabric-power-bi",
+    keywords  = "latex,knuth"
+}
+@online{fabric_onelake,
+    author    = "Microsoft",
+    title     = "Fabric | OneLake",
+    url       = "https://learn.microsoft.com/en-us/fabric/onelake/onelake-overview",
+    keywords  = "latex,knuth"
+}
 
 
 
